# MyTodoList

./: CMakeLists.txt  CMakeLists.txt.user.676a97d  Delegator.qml  Main.qml  NoManagerMain.qml  NoManagermain.cpp  README.md  Topbar.qml  external_res.qrc  main.cpp  task.cpp  task.h  taskmanager.cpp  taskmanager.h
